--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "font-awesome-stylus": "^4.7.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.1.3",
+    "vue2-dropzone": "^3.2.2",
     "vuetify": "^0.17.7"
   },
   "devDependencies": {
