--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.13.3",
+    "busboy": "^0.2.14",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
